 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky">
    
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:orientation="vertical"
          >
          
            <TextView
        android:id="@+id/cityText"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:layout_weight="0.2"/>
            
            
            <LinearLayout android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="0.2"
                >
                  <Button
	            android:id="@+id/buttonFav"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="onClickFav"
	            android:text="@string/buttonFav" />

	    <Button
	        android:id="@+id/buttonActualiser"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onClickRefresh"
	        android:text="@string/buttonRefresh"
	        
	         />
            </LinearLayout>
            
                  <ImageView
        android:id="@+id/condIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_weight="0.4"
        android:layout_gravity="center"
        android:contentDescription="@string/txtWeatherIMG"/>
                  
                  <View android:layout_weight="1"
                      android:layout_height="match_parent"
                      android:layout_width="fill_parent" />
          
         
          <TableLayout
         android:id="@+id/table"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="#58ACFA"
         >
         
        <View android:layout_height="1dip"
                android:background="#FFFFFF"/>
	      
            <TableRow
             android:id="@+id/row4"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:padding="5dip"
             
             >
            
              <TextView
        android:id="@+id/condDescr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="#FFFFFF"/>
             
         </TableRow>
         
            <View android:layout_height="1dip"
                android:background="#FFFFFF"/>
         
            <TableRow
             android:id="@+id/row5"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:padding="5dip"
             android:gravity="center_horizontal"
             >
              
                <TextView 
                    android:id="@+id/tempLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="15sp"
        			android:textColor="#FFFFFF"
        			android:text="@string/txtTemp"
                    />
            
               <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="12dp"/>
             
         </TableRow>
         
             <View android:layout_height="1dip"
                android:background="#FFFFFF"/>
            
            <TableRow
             android:id="@+id/row6"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:padding="5dip"
             android:gravity="center_horizontal"
             >
            
              <TextView
        android:id="@+id/pressLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAtmPressure"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp" />
              
       

    <TextView
        android:id="@+id/press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        />
             
         </TableRow>
         
             <View android:layout_height="1dip"
                android:background="#FFFFFF"/>
         
              <TableRow
             android:id="@+id/row7"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:padding="10dip"
             android:gravity="center_horizontal"
             >
            
          <TextView
        android:id="@+id/humLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/txtHum"
        android:textSize="15sp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        />
             
         </TableRow>
         
               <View android:layout_height="1dip"
                android:background="#FFFFFF"/>
                
            <TableRow
             android:id="@+id/row8"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:padding="10dip"
             android:gravity="center_horizontal"
             >
            
                <TextView
        android:id="@+id/windForceLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtWindForce"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="#FFFFFF"/>
                
                  <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
         />
                

             
         </TableRow>
         
             <View android:layout_height="1dip"
                android:background="#FFFFFF"/>
            
            <TableRow
             android:id="@+id/row9"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:padding="5dip"
             android:gravity="center_horizontal"
             >
            
                       <TextView
        android:id="@+id/windDegLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtWindDir"
        android:gravity="left"
        android:textSize="15sp"
        android:textColor="#FFFFFF"/>
        
    <TextView
        android:id="@+id/windDeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp" 
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        />
             
         </TableRow>
         
             <View android:layout_height="1dip"
                android:background="#FFFFFF"/>
              
         
     </TableLayout>
         
         
     </LinearLayout>
    
     
    
     
     
    </ScrollView>
 
 