                                <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/sky"
                    tools:context="${relativePackage}.${activityClass}" >
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1" >
    
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
	     android:layout_weight="0.11"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:text="@string/textTitle" />
     
     <View android:layout_width="fill_parent"
            android:layout_height="70dp"/>
     
        <TextView
            android:id="@+id/textSelect"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/textSelect"
            android:textColor="#FFFFFF"
         	android:textSize="16sp"
             />
        
        

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.12"
            android:layout_gravity="center_horizontal"
            
             />
        
        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/buttonConsult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.07"
            android:onClick="onClickConsult"
            android:text="@string/buttonConsult"
            android:textColor="#FFFFFF"
            android:background="@android:color/transparent"/>

        
        
        <Button
            android:id="@+id/buttonFav"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.04"
            android:onClick="onClickFavorite"
            
            android:textColor="#FFFFFF"
            android:background="@android:color/transparent"
            />
	
        
    </LinearLayout>    


</ScrollView>
  